arreglo de foto caja 15 años

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -141,7 +141,7 @@ header{
             width: 45%;
             height: 90%;
             border-radius: 10px;
-            background-image: url(../multimedia/images/caja15años.JPG);
+            background-image: url(../multimedia/images/caja15años.jpg);
             background-size: cover;
             background-position-y:-3em;
             &:hover{
