volviendo al color cremoso en portfolio

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -115,7 +115,7 @@ header{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: $amarillo-complemetario;
+        background-color: $titulos-sec-color;
         height: 100%;
         .span__port{
             font-size: 1.9em;
