responsive para mobile solucionado

--- a/styles/style.css
+++ b/styles/style.css
@@ -85,7 +85,6 @@ header {
   z-index: 2;
   display: flex;
   align-items: center;
-  margin-top: 20em;
 }
 
 .principal .principal__contenedorH1 .principal__h1 {
@@ -135,6 +134,10 @@ header {
 .portfolio .portfolio__titulo .span__port, .portfolio .portfolio__titulo .span__fo, .portfolio .portfolio__titulo .span__lio {
   font-size: 1.9em;
   letter-spacing: normal;
+}
+
+.portfolio .portfolio__titulo .portfolio__titulo--media {
+  display: none;
 }
 
 .portfolio .portfolio__contenedor__cajas {
@@ -402,8 +405,8 @@ header {
 
 .servicios {
   height: 100vh;
-  border-top: #474747 3px solid;
-  border-bottom: #474747 3px solid;
+  border-top: #0c2f3dfb 2px solid;
+  border-bottom: #0c2f3dfb 2px solid;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -427,10 +430,6 @@ header {
   font-size: 2em;
   text-transform: none;
   letter-spacing: normal;
-}
-
-.servicios .servicios__lens span {
-  margin-right: 9px;
 }
 
 .servicios .carouselContainer {
@@ -462,14 +461,16 @@ header {
 
 .contacto {
   height: max-content;
+  display: flex;
+  justify-content: center;
 }
 
 .contacto .contacto__contenedor {
-  background-color: white;
   width: 90%;
-  margin: 30px 0 30px 0;
-  border: 5px solid #114358;
+  padding: 1em;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .contacto .contacto__contenedor .contacto__contenedor__titulo {
@@ -480,7 +481,7 @@ header {
 .contacto .contacto__contenedor .contacto__contenedor__titulo .contacto__titulo {
   color: #114358;
   margin-bottom: 40px;
-  font-size: 40px;
+  font-size: 3em;
   text-transform: uppercase;
   font-weight: normal;
   letter-spacing: 20px;
@@ -501,6 +502,11 @@ header {
 
 .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__bloque__inputs {
   width: 50%;
+}
+
+.contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__bloque__inputs .contacto__form__div {
+  background-color: #0c2f3d;
+  color: white;
 }
 
 .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__form__textarea {
@@ -524,11 +530,11 @@ header {
 .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor .contacto__boton {
   width: 15%;
   font-size: 1.2em;
-  background-color: #114358;
+  background-color: #0c2f3d;
 }
 
 .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor :hover {
-  background-color: #808080;
+  background-color: #114358;
 }
 
 .footer {
@@ -566,57 +572,54 @@ header {
   transition: all 0.4s;
 }
 
-@media all and (min-width: 320px) and (max-width: 425px) {
+@media only screen and (min-width: 320px) and (max-width: 500px) {
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
   header {
+    width: 100%;
+    height: auto;
     background-color: #114358;
-    position: fixed;
     z-index: 4;
-    width: 100%;
+    position: fixed;
   }
-  .logoContainer {
-    width: 40%;
-  }
-  .logo {
-    width: 100%;
-  }
-  .navbar {
+  header .navbar {
     display: flex;
     justify-content: start;
   }
-  .dropdown-menu {
+  header .navbar .logoContainer {
+    width: 50%;
+  }
+  header .navbar .logoContainer .logo {
+    width: 100%;
+  }
+  header .navbar .dropdown-menu {
     background-color: #0c2f3d;
   }
-  .dropdown-menu .dropdown-item {
+  header .navbar .dropdown-menu .dropdown-item {
     color: white;
   }
-  .dropdown-menu .dropdown-item:hover {
-    background-color: #253f49;
-  }
-  .sec {
-    width: 100%;
-    height: auto;
-    background-color: #f1ece7;
-  }
   .principal {
-    height: max-content;
     width: 100%;
-  }
-  .principal .principal__contenedorH1 {
-    position: absolute;
-    z-index: 2;
-    margin-bottom: 2em;
+    height: max-content;
+    padding-top: 2em;
   }
   .principal .principal__contenedorH1 .principal__h1 {
     font-family: 'Gilda Display', serif;
     letter-spacing: 0.5em;
     color: #ffffff;
-    font-size: large !important;
-    margin-left: 4em;
+    font-size: 2em;
+    padding-left: 0;
   }
   .carousel-indicators {
     display: none;
   }
+  .carousel-icon {
+    display: none;
+  }
   .nosotros {
+    width: 100%;
     height: max-content;
     background-size: cover;
     display: flex;
@@ -660,33 +663,38 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: black;
   }
   .portfolio .portfolio__titulo {
-    color: #D3ECA7;
-    padding-left: 0.8em;
-    font-size: 1.5em;
+    height: auto;
+    width: 100%;
+    background-color: #D3ECA7;
+    font-size: 3em;
     text-transform: uppercase;
-    font-weight: normal;
-    letter-spacing: 0.7em;
-    margin-top: 20px;
+    padding: 0 0 0 0;
+    text-align: center;
+  }
+  .portfolio .portfolio__titulo .span__portfolio {
+    display: none;
+  }
+  .portfolio .portfolio__titulo .portfolio__titulo--media {
+    display: block;
   }
   .portfolio .portfolio__contenedor__cajas {
-    width: 80%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin: 20px 0 20px 0;
   }
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV {
-    width: 100%;
+    width: 90%;
     height: 50%;
     border-radius: 10px;
-    background-image: url(../multimedia/images/caja15años.JPG);
+    background-image: url(../multimedia/images/caja15años.jpg);
     background-size: cover;
-    background-position-x: 20px;
+    background-position-y: -4.5em;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV:active {
+    transition: all 1s;
   }
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV .portfolio__linkXV .textoXVaños {
     display: none;
@@ -703,17 +711,21 @@ header {
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV:hover .portfolio__linkXV .textoXVaños {
     display: block;
     color: antiquewhite;
-    font-size: 50px;
+    font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 0.2em;
     margin-left: 0.2em;
   }
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas {
-    width: 100%;
+    width: 90%;
     height: 50%;
-    border-radius: 10px;
     background-image: url(../multimedia/images/cajaBodas.jpg);
     background-size: cover;
+    background-position-y: -5em;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas:active {
+    transform: scale(1.05);
+    transition: all 1s;
   }
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas .portfolio__linkBodas .textoBodas {
     display: none;
@@ -730,9 +742,282 @@ header {
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas:hover .portfolio__linkBodas .textoBodas {
     display: block;
     color: antiquewhite;
-    font-size: 50px;
+    font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 0.2em;
+  }
+  /* GALERIA */
+  .galeria__contenedor__titulo {
+    width: 100%;
+    height: 10em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .galeria__contenedor__titulo .galeria__titulo {
+    color: #D3ECA7;
+    font-size: 2.5em;
+    font-family: 'Gilda Display', serif;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    padding-top: 1em;
+  }
+  .galeria {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 2em 0;
+    /* GALERIA BODAS */
+  }
+  .galeria .contenedorImgXV {
+    width: 90%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(15, 12em);
+    text-align: center;
+    gap: 10px;
+  }
+  .galeria .contenedorImgXV :hover {
+    transform: scale(1.05);
+    transition: all 0.8s;
+  }
+  .galeria .contenedorImgXV .imgXV1 {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-1.jpg);
+    background-size: cover;
+    background-position-y: -40px;
+  }
+  .galeria .contenedorImgXV .imgXV2 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-11.jpg);
+    background-size: cover;
+    background-position: bottom;
+  }
+  .galeria .contenedorImgXV .imgXV3 {
+    grid-column: 1/2;
+    grid-row: 4/7;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-2.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  .galeria .contenedorImgXV .imgXV4 {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-2.jpg);
+    background-size: cover;
+  }
+  .galeria .contenedorImgXV .imgXV5 {
+    grid-column: 1/2;
+    grid-row: 8/11;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-3.jpg);
+    background-size: cover;
+  }
+  .galeria .contenedorImgXV .imgXV6 {
+    grid-column: 1/2;
+    grid-row: 11/13;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-12.jpg);
+    background-size: cover;
+    background-position-y: -5em;
+  }
+  .galeria .contenedorImgXV .imgXV7 {
+    grid-column: 1/2;
+    grid-row: 13/14;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-9.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  .galeria .contenedorImgXV .imgXV8 {
+    grid-column: 1/2;
+    grid-row: 14/16;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-1.jpg);
+    background-size: cover;
+    background-position-y: center;
+    background-position-x: center;
+  }
+  .galeria .contenedorImgB {
+    width: 95%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(8, 15em);
+    text-align: center;
+    gap: 10px;
+  }
+  .galeria .contenedorImgB :hover {
+    transform: scale(1.05);
+    transition: all 0.8s;
+  }
+  .galeria .contenedorImgB .imgB1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-image: url(../multimedia/images/galeria/bodas/boda-1.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  .galeria .contenedorImgB .imgB2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-image: url(../multimedia/images/galeria/bodas/boda-2.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-image: url(../multimedia/images/galeria/bodas/boda-3.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB4 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    background-image: url(../multimedia/images/galeria/bodas/boda-4.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB5 {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    background-image: url(../multimedia/images/galeria/bodas/boda-5.jpg);
+    background-size: cover;
+  }
+  .galeria .contenedorImgB .imgB6 {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    background-image: url(../multimedia/images/galeria/bodas/boda-6.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB7 {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    background-image: url(../multimedia/images/galeria/bodas/boda-7.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB8 {
+    grid-column: 1/2;
+    grid-row: 8/9;
+    background-image: url(../multimedia/images/galeria/bodas/boda-8.jpg);
+    background-size: cover;
+  }
+  .servicios {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .servicios .servicios__titulo, .servicios .servicios__lens {
+    width: 100%;
+    font-size: 3em;
+    letter-spacing: normal;
+  }
+  .servicios .carouselContainer {
+    width: 90%;
+    height: 50%;
+  }
+  .servicios .servicios__lens {
+    font-size: 2em;
+  }
+  .contacto {
+    height: 100vh;
+    width: 100%;
+  }
+  .contacto .contacto__contenedor {
+    width: 100%;
+    padding: 1em;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .contacto .contacto__contenedor .contacto__contenedor__titulo {
+    display: flex;
+    justify-content: center;
+  }
+  .contacto .contacto__contenedor .contacto__contenedor__titulo .contacto__titulo {
+    color: #114358;
+    margin-bottom: 40px;
+    font-size: 3em;
+    text-transform: uppercase;
+    letter-spacing: normal;
+  }
+  .contacto .contacto__contenedor .contacto__form {
+    border: none;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque {
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__bloque__inputs {
+    width: 100%;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__bloque__inputs .contacto__form__div {
+    background-color: #0c2f3d;
+    color: white;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__form__textarea {
+    width: 100%;
+    height: 14em;
+    margin-left: 0;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__form__textarea textarea {
+    resize: none;
+    width: 100%;
+    height: 100%;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1em;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor .contacto__boton {
+    width: 25%;
+    font-size: 1.2em;
+    background-color: #0c2f3d;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor :hover {
+    background-color: #114358;
+  }
+  .footer {
+    background-color: white;
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer .footer__titulo {
+    margin-bottom: 1.5em;
+    font-weight: lighter;
+    text-transform: uppercase;
+    font-size: 2em;
+    text-align: center;
+  }
+  .footer .footer__redes {
+    display: flex;
+    justify-content: space-around;
+  }
+  .footer .footer__redes .footer__redes__item {
+    margin: 0 2em 0 2em;
+  }
+  .footer .footer__redes .footer__redes__item .footer__redes__link {
+    color: grey;
+    text-decoration: none;
+    font-size: 3em;
+  }
+  .footer .footer__redes .footer__redes__item :hover {
+    transform: scale(1.1);
+    transition: all 0.4s;
   }
 }
 
